# libossia

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  Automation.h  CMakeLists.txt  Curve.h  CurveSegment.h  Event.h  Expression.h  IObservable.h  IObserver.h  InteractiveBranching.h  InteractiveEvent.h  Message.h  Questions.txt  README.md  Scenario.h  Score.h  State.h  StateElement.h  TimeBox.h  TimeNode.h  TimeProcess.h  TimeValue.h  appveyor.yml  azure-pipelines.yml  conanfile.py
Documentation/Examples/: CMakeLists.txt  complete.cpp  expression.cpp  network.cpp  scenario.cpp
Examples/: CMakeLists.txt  branching.cpp  create_device.cpp  curve.cpp  main.cpp  network.cpp  scenario.cpp  state.cpp  stateEx.cpp
Implementations/Basic/: Address.cpp  Address.hpp  BasicAddress.cpp  BasicAddress.h  BasicDevice.cpp  BasicDevice.h  BasicLocal.cpp  BasicLocal.h  BasicMinuit.cpp  BasicMinuit.h  BasicNode.cpp  BasicNode.h  BasicOSC.cpp  BasicOSC.h  BasicProtocol.cpp  BasicProtocol.h  CMakeLists.txt  Device.cpp  Device.hpp  Domain.hpp  Node.cpp  Node.hpp  Protocol.cpp  Protocol.hpp
Implementations/Common/: CMakeLists.txt
Implementations/Jamoma/: CMakeLists.txt  Makefile  support_install.rb  support_update.rb
Implementations/Mock/: CMakeLists.txt
OSSIA/: CMakeLists.txt  InstallBoost.cmake  git_info.h  ossia-config.hpp.in  ossia_bindings.cmake  ossia_features.cmake  ossia_install.cmake  ossia_setup.cmake  ossia_sources.cmake  ossia_tooling.cmake
OSSIA/ossia/: OSSIA.hpp  context.cpp  context.cpp.K10616  context.hpp  misc_visitors.hpp  ossia.cpp  ossia.hpp  prefix.hpp
OSSIA/ossia-c/: CMakeLists.txt  ossia-c.h
OSSIA/ossia-cpp/: ossia-cpp98.cpp  ossia-cpp98.hpp
OSSIA/ossia-faust/: OssiaUI.h  README  portaudio-arch.cpp  portaudio-dynamic-arch.cpp
OSSIA/ossia-java/: CMakeLists.txt  Ossia.java  README.md  SizeT.java  Type.java  Vec2F.java  Vec3F.java  Vec4F.java  example-processing.java  example.java  ossia-java.cpp  ossia-java.hpp  test.java
OSSIA/ossia-max/: CMakeLists.txt  package-info.json
OSSIA/ossia-node/: CMakeLists.txt  README.md  ossia-node.cpp  ossia.js
OSSIA/ossia-pd/: CMakeLists.txt
OSSIA/ossia-python/: CMakeLists.txt  MANIFEST.in  README.md  README.rst  ossia-python-defval.py  ossia-python_decorator.py  ossia-python_example.py  ossia-python_mq_example.py  ossia_decorator.py  ossia_python.cpp  ossia_python_example.py  setup.cfg  setup.py  spec ossia python.py  test_decorator.py  test_decorator_2.py  test_decorator_3.py  vplayer.py  vplayer_instance.py
OSSIA/ossia-qt/: device_metatype.hpp  js_utilities.cpp  js_utilities.hpp  matching_type.hpp  metatypes.hpp  name_utils.hpp  qml_context.cpp  qml_context.hpp  qml_plugin.cpp  qml_plugin.hpp  qml_resources.qrc  qt_logger.cpp  qt_logger.hpp  value_metatypes.hpp
OSSIA/ossia-unity3d/: Address.cs  Interop.cs  Node.cs  OssiaUnity.cs  Parameter.cs  Properties.cs  Protocols.cs  README.md  Value.cs
Tests/: CMakeLists.txt  DeviceTest.cpp  ForwardDeclaration.h  ScenarioTest.cpp  TimeEventTest.cpp
Tests/Benchmarks/: AddressCorpus.txt  AutomationBenchmark.cpp  AutomationFloatBenchmark.cpp  AutomationFloatDataBench.cpp  ConstraintBenchmark.cpp  DeviceBenchmark.cpp  DeviceBenchmark_Nsec_client.cpp  DeviceBenchmark_Nsec_server.cpp  DeviceBenchmark_client.cpp  IntervalBenchmark.cpp  MappingBenchmark.cpp  MappingDataBenchmark.cpp  MappingGluttonBenchmark.cpp  MappingGluttonDataBenchmark.cpp  MappingStrictBenchmark.cpp  MappingStrictDataBenchmark.cpp  MixNSines.cpp  Random.hpp  run_device_bench.sh
Tests/C/: CMakeLists.txt
Tests/CPP/: CPP98.cpp
Tests/Dataflow/: DataflowTest.cpp  GraphBenchmark.cpp  TickMethodTest.cpp
Tests/Editor/: AutomationTest.cpp  ClockTest.cpp  CurveTest.cpp  DataspaceMergeTest.cpp  DataspaceTest.cpp  DomainTest.cpp  ExpressionAtomTest.cpp  ExpressionCompositionTest.cpp  ExpressionNotTest.cpp  ExpressionPulseTest.cpp  ExpressionTest.cpp  LoopTest.cpp  MapperTest.cpp  MessageTest.cpp  ScenarioAlgoTest.cpp  ScenarioTest.cpp  StateTest.cpp  TestUtils.hpp  TimeConstraintTest.cpp  TimeEventTest.cpp  TimeIntervalTest.cpp  TimeNodeTest.cpp  TimeSyncTest.cpp  TimeValueTest.cpp  ValueTest.cpp
Tests/Network/: AddressTest.cpp  DeviceTest.cpp  HttpTest.cpp  NodeTest.cpp  OSCQueryColorTest.cpp  OSCQueryTest.cpp  OSCQueryTreeCallbackTest.cpp  OSCQueryValueCallbackTest.cpp  PathTest.cpp  PhidgetTest.cpp  TestUtils.hpp  WebSocketTest.cpp
Tests/Preset/: PresetTest.cpp
Tests/Qt/: JSTest.cpp  QmlApiTest.cpp  QmlDeviceTest.cpp  QmlPresetTest.cpp  QtDeviceTest.cpp  ScoreTest1.qml
Tests/Repartition/: CMakeLists.txt
Tests/catch/: catch.hpp
Tests/helpers/: ForwardDeclaration.hpp
Tests/v2/: CMakeLists.txt  minuit_remote.cpp  minuit_remote.py
examples/: CMakeLists.txt  README.md  branching.cpp
examples/Common/: FuzzySearch.cpp  Logger.cpp  README.md
examples/Dataflow/: MiniDAW.cpp  MixSines.cpp  MixSinesAddress.cpp  SynthOSC.cpp
examples/Editor/: automation.cpp  curve.cpp  example_graph.cpp  expression.cpp  loop.cpp  mapping.cpp  scenario.cpp  state.cpp
examples/Network/: Arduino.cpp  LeapToOscQuery.cpp  Libmapper.cpp  Minuit_exploration.cpp  Minuit_publication.cpp  Minuit_publication_large.cpp  Mqtt_publication.cpp  OSC.cpp  OSCQuery_bridge.cpp  OSCQuery_exploration.cpp  OSCQuery_preset.cpp  OSCQuery_publication.cpp  OSCQuery_publication_simple.cpp  OSCQuery_validator.cpp  OSCQuery_various.cpp  OSC_echo.cpp  OSC_send.cpp  OSC_simple.cpp  PdController.cpp  RateLimiter.cpp  Reception_C_API.cpp
examples/Preset/: DeviceExample.cpp  Export_namespace_to_json.cpp  ParsingExample.cpp  PrintNamespace.cpp
examples/Web/: DoubleWSServer.cpp  JpegStreamer.cpp  double_ws_server-test.html  jpeg_server-test.html
minimal/: CMakeLists.txt
src/: CMakeLists.txt  InstallBoost.cmake  git_info.cpp.in  git_info.h  ossia-config.hpp.in  ossia_bindings.cmake  ossia_ci.cmake  ossia_features.cmake  ossia_install.cmake  ossia_setup.cmake  ossia_sources.cmake  ossia_tooling.cmake
src/ossia-c/: ossia-c.h
src/ossia-cpp/: ossia-cpp98.cpp  ossia-cpp98.hpp
tests/: CMakeLists.txt  suppressions.txt
(+4585 files in other folders)
